[package]
name = "btree_map"
version = "0.1.0"
edition = "2021"

[lib]
name = "btree_map"
path = "src/lib/btree_map.rs"

[[bin]]
name = "btree_map_main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Only need crate rand for tests, run test with "cargo test --features stress_test"
[dependencies]
rand = { version = "0.8.5", optional = true}

[features]
stress_test = ["dep:rand"]
